--- a/.github/workflows/github-actions-app.yml
+++ b/.github/workflows/github-actions-app.yml
@@ -4,12 +4,14 @@ jobs:
   test:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
-      - name: Set up Ruby
-        uses: ruby/setup-ruby@359bebbc29cbe6c87da6bc9ea3bc930432750108
+      - uses: actions/checkout@v2
+      - uses: ruby/setup-ruby@v1
         with:
-          ruby-version: '2.4'
-          bundler-cache: true
+        - name: Set up Ruby
+          uses: ruby/setup-ruby@359bebbc29cbe6c87da6bc9ea3bc930432750108
+          with:
+            ruby-version: '2.4'
+            bundler-cache: true
       - name: Install dependencies
         run: bundle install
       - name: Run tests
