--- a/.github/workflows/github-actions-app.yml
+++ b/.github/workflows/github-actions-app.yml
@@ -3,6 +3,25 @@ on: [push]
 jobs:
   test:
     runs-on: ubuntu-latest
+
+    container:
+      image:  node:16-bullseye
+
+    services:
+      postgres:
+        image: postgres:latest
+        env:
+          POSTGRES_USER: test
+          POSTGRES_PASSWORD: runner
+          POSTGRES_DB: postgres
+        ports:
+        - 5432:5432
+        options: >-
+          --mount type=tmpfs,destination=/var/lib/postgresql/data
+          --health-cmd pg_isready
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5        
     steps:
       - uses: actions/checkout@v2
       - uses: ruby/setup-ruby@v1
@@ -12,3 +31,6 @@ jobs:
         run: bundle install
       - name: Run tests
         run: bundle exec rspec
+        env:
+          DATABASE_URL: postgres://test:runner@postgres:5432/postgres
+          RACK_ENV: test
