--- a/.github/workflows/github-actions-app.yml
+++ b/.github/workflows/github-actions-app.yml
@@ -25,6 +25,10 @@ jobs:
           ruby-version: '2.4.9'
       - name: Install dependencies
         run: bundle install
+      - name: Init database
+        run: bundle exec rake db:create
+      - run: bundle exec rake db:migrate
+      - run: bundle exec rake db:seed
       - name: Run tests
         run: bundle exec rspec
         env:
