--- a/.github/workflows/github-actions-app.yml
+++ b/.github/workflows/github-actions-app.yml
@@ -59,7 +59,7 @@ jobs:
       - name: Build, tag, and push image to Amazon ECR
         env:
           ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-          ECR_REPOSITORY: kittens-store
+          ECR_REPOSITORY: kittens_store
           IMAGE_TAG: ${{ github.sha }}
         run: |
           docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
